fix xlsx export missing alignment attributes with cellstyle fdo#55417

Change-Id: I510d0f399c58b5a9b192f3566e093c636cae2c0a